Added registering and get user to storage
